--- a/share/locale/eo.json
+++ b/share/locale/eo.json
@@ -34,7 +34,7 @@
     "gui_copied_url": "URL kopiita en tondujon",
     "gui_copied_hidservauth": "Copied HidServAuth line to clipboard",
     "gui_starting_server1": "Startigas Tor onion service...",
-    "gui_starting_server2": "Crunching files...",
+    "gui_starting_server2": "Compressing files...",
     "gui_please_wait": "Bonvolu atendi...",
     "error_hs_dir_cannot_create": "Ne eblas krei hidden-service-dosierujon {0:s}",
     "error_hs_dir_not_writable": "ne eblas konservi dosierojn en hidden-service-dosierujo {0:s}",
@@ -47,7 +47,7 @@
     "gui_quit_warning_quit": "Foriri",
     "gui_quit_warning_dont_quit": "Ne foriri",
     "error_rate_limit": "Iu atankanto povas provi diveni vian URL. Por eviti tion, OnionShare aŭtomate haltis la servilon. Por kundividi la dosierojn vi devas starti ĝin denove kaj kundividi la novan URL.",
-    "zip_progress_bar_format": "Crunching files: %p%",
+    "zip_progress_bar_format": "Compressing files: %p%",
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare postulas almenaŭ Tor 0.2.7.1 kaj almenaŭ python3-stem 1.4.0.",
     "gui_menu_file_menu": "&File",
