Add command line flag for receive mode

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -10,6 +10,7 @@
     "ctrlc_to_stop":  "Press Ctrl-C to stop server",
     "not_a_file": "{0:s} is not a valid file.",
     "not_a_readable_file": "{0:s} is not a readable file.",
+    "no_filenames": "You must specify a list of files to share.",
     "no_available_port": "Could not start the Onion service as there was no available port.",
     "download_page_loaded": "Download page loaded",
     "other_page_loaded": "Address loaded",
@@ -31,6 +32,7 @@
     "help_shutdown_timeout": "Shut down the onion service after N seconds",
     "help_transparent_torification": "My system is transparently torified",
     "help_stealth": "Create stealth onion service (advanced)",
+    "help_receive": "Receive files instead of sending them",
     "help_debug": "Log application errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
     "help_config": "Path to a custom JSON config file (optional)",
