Show different message for receive mode than for send mode

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -5,8 +5,10 @@
     "wait_for_hs_trying": "Trying...",
     "wait_for_hs_nope": "Not ready yet.",
     "wait_for_hs_yup": "Ready!",
-    "give_this_url": "Give this address to the person you're sending the file to:",
-    "give_this_url_stealth": "Give this address and HidServAuth line to the person you're sending the file to:",
+    "give_this_url": "Give this address to the person you're sending the files to:",
+    "give_this_url_stealth": "Give this address and HidServAuth line to the person you're sending the files to:",
+    "give_this_url_receive": "Give this address to the people sending you files:",
+    "give_this_url_receive_stealth": "Give this address and HidServAuth line to the people sending you files:",
     "ctrlc_to_stop":  "Press Ctrl-C to stop server",
     "not_a_file": "{0:s} is not a valid file.",
     "not_a_readable_file": "{0:s} is not a readable file.",
