Spellign: - not, expire

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -29,7 +29,6 @@
     "help_local_only": "Do not attempt to use Tor: For development only",
     "help_stay_open": "Keep onion service running after download has finished",
     "help_shutdown_timeout": "Shut down the onion service after N seconds",
-    "help_transparent_torification": "My system is transparently Torified",
     "help_stealth": "Create stealth onion service (advanced)",
     "help_debug": "Log application errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
@@ -41,7 +40,7 @@
     "gui_start_server": "Start Sharing",
     "gui_stop_server": "Stop Sharing",
     "gui_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
-    "gui_stop_server_shutdown_timeout_tooltip": "Share will stop automatically at {}",
+    "gui_stop_server_shutdown_timeout_tooltip": "Share will expire automatically at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Downloads:",
@@ -120,7 +119,7 @@
     "settings_error_auth": "Connected to {}:{}, but can't authenticate. Maybe this isn't a Tor controller?",
     "settings_error_missing_password": "Connected to Tor controller, but it requires a password to authenticate.",
     "settings_error_unreadable_cookie_file": "Connected to Tor controller, but can't authenticate because your password may be wrong, and your user lacks permission to read the cookie file.",
-    "settings_error_bundled_tor_not_supported": "Use of the Tor version bundled with OnionShare is not supported when not using developer mode on Windows or macOS.",
+    "settings_error_bundled_tor_not_supported": "Use of the Tor version bundled with OnionShare is not supported when using developer mode on Windows or macOS.",
     "settings_error_bundled_tor_timeout": "Connecting to Tor is taking too long. Maybe your computer is offline, or your system clock isn't accurate.",
     "settings_error_bundled_tor_canceled": "The Tor process closed before it could finish connecting.",
     "settings_error_bundled_tor_broken": "OnionShare could not connect to Tor in the background:\n{}",
@@ -142,10 +141,10 @@
     "share_via_onionshare": "Share via OnionShare",
     "gui_save_private_key_checkbox": "Use a persistent address\n(unchecking will delete any saved addresses)",
     "gui_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using the <b>Tor Browser</b>: <img src='{}' />",
-    "gui_url_label_persistent": "This share will not stop automatically unless a timer is set.<br><br>Every share will have the same address (to use one-time addresses, disable persistence in Settings)",
-    "gui_url_label_stay_open": "This share will not stop automatically unless a timer is set.",
-    "gui_url_label_onetime": "This share will stop after the first download",
-    "gui_url_label_onetime_and_persistent": "This share will stop after the first download<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
+    "gui_url_label_persistent": "This share will not expire automatically unless a timer is set.<br><br>Every share will have the same address (to use one-time addresses, disable persistence in Settings)",
+    "gui_url_label_stay_open": "This share will not expire automatically unless a timer is set.",
+    "gui_url_label_onetime": "This share will expire after the first download",
+    "gui_url_label_onetime_and_persistent": "This share will expire after the first download<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
     "gui_status_indicator_stopped": "Ready to Share",
     "gui_status_indicator_working": "Starting…",
     "gui_status_indicator_started": "Sharing",
