--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -164,5 +164,8 @@
     "receive_mode_warning": "Warning: Some files can hack your computer if you open them! Only open files from people you trust, or if you know what you're doing.",
     "receive_mode_received_file": "Received file: {}",
     "gui_mode_share_button": "Share Files",
-    "gui_mode_receive_button": "Receive Files"
+    "gui_mode_receive_button": "Receive Files",
+    "gui_settings_receiving_label": "Receiving options",
+    "gui_settings_downloads_label": "Save files to",
+    "gui_settings_downloads_button": "Browse"
 }
