--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -151,9 +151,12 @@
     "gui_url_label_stay_open": "This share will not expire automatically unless a timer is set.",
     "gui_url_label_onetime": "This share will expire after the first download",
     "gui_url_label_onetime_and_persistent": "This share will expire after the first download<br><br>Every share will have the same address (to use one-time addresses, disable persistence in the Settings)",
-    "gui_status_indicator_stopped": "Ready to Share",
-    "gui_status_indicator_working": "Starting…",
-    "gui_status_indicator_started": "Sharing",
+    "gui_status_indicator_share_stopped": "Ready to Share",
+    "gui_status_indicator_share_working": "Starting…",
+    "gui_status_indicator_share_started": "Sharing",
+    "gui_status_indicator_receive_stopped": "Ready to Receive",
+    "gui_status_indicator_receive_working": "Starting…",
+    "gui_status_indicator_receive_started": "Receiving",
     "gui_file_info": "{} Files, {}",
     "gui_file_info_single": "{} File, {}",
     "info_in_progress_downloads_tooltip": "{} download(s) in progress",
