Make different strings for start server button for different modes

--- a/share/locale/cs.json
+++ b/share/locale/cs.json
@@ -25,8 +25,8 @@
     "gui_add": "Přidat",
     "gui_delete": "Smazat",
     "gui_choose_items": "Vybrat",
-    "gui_start_server": "Spustit sdílení",
-    "gui_stop_server": "Zastavit sdílení",
+    "gui_share_start_server": "Spustit sdílení",
+    "gui_share_stop_server": "Zastavit sdílení",
     "gui_copy_url": "Kopírovat URL",
     "gui_copy_hidservauth": "Kopírovat HidServAuth",
     "gui_downloads": "Stahování:",
