--- a/share/locale/da.json
+++ b/share/locale/da.json
@@ -38,8 +38,8 @@
     "gui_add": "Tilføj",
     "gui_delete": "Slet",
     "gui_choose_items": "Vælg",
-    "gui_start_server": "Start deling",
-    "gui_stop_server": "Stop deling",
+    "gui_share_start_server": "Start deling",
+    "gui_share_stop_server": "Stop deling",
     "gui_copy_url": "Kopiér URL",
     "gui_copy_hidservauth": "Kopiér HidServAuth",
     "gui_downloads": "Downloads:",
