--- a/share/locale/de.json
+++ b/share/locale/de.json
@@ -25,8 +25,8 @@
     "gui_add": "Hinzufügen",
     "gui_delete": "Löschen",
     "gui_choose_items": "Auswählen",
-    "gui_start_server": "Server starten",
-    "gui_stop_server": "Server anhalten",
+    "gui_share_start_server": "Server starten",
+    "gui_share_stop_server": "Server anhalten",
     "gui_copy_url": "URL kopieren",
     "gui_downloads": "Downloads:",
     "gui_copied_url": "URL wurde in die Zwischenablage kopiert",
