--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -41,10 +41,14 @@
     "gui_add": "Add",
     "gui_delete": "Delete",
     "gui_choose_items": "Choose",
-    "gui_start_server": "Start Sharing",
-    "gui_stop_server": "Stop Sharing",
-    "gui_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
-    "gui_stop_server_shutdown_timeout_tooltip": "Share will expire automatically at {}",
+    "gui_share_start_server": "Start Sharing",
+    "gui_share_stop_server": "Stop Sharing",
+    "gui_share_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
+    "gui_share_stop_server_shutdown_timeout_tooltip": "Share will expire automatically at {}",
+    "gui_receive_start_server": "Start Receive Mode",
+    "gui_receive_stop_server": "Stop Receive Mode",
+    "gui_receive_stop_server_shutdown_timeout": "Stop Receive Mode ({}s remaining)",
+    "gui_receive_stop_server_shutdown_timeout_tooltip": "Receive mode will expire automatically at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_downloads": "Download History",
