--- a/share/locale/eo.json
+++ b/share/locale/eo.json
@@ -25,8 +25,8 @@
     "gui_add": "Aldoni",
     "gui_delete": "Forviŝi",
     "gui_choose_items": "Elekti",
-    "gui_start_server": "Komenci kundividon",
-    "gui_stop_server": "Ĉesigi kundividon",
+    "gui_share_start_server": "Komenci kundividon",
+    "gui_share_stop_server": "Ĉesigi kundividon",
     "gui_copy_url": "Kopii URL",
     "gui_copy_hidservauth": "Kopii HidServAuth",
     "gui_downloads": "Elŝutoj:",
