--- a/share/locale/fi.json
+++ b/share/locale/fi.json
@@ -26,8 +26,8 @@
     "gui_add": "Lisää",
     "gui_delete": "Poista",
     "gui_choose_items": "Valitse",
-    "gui_start_server": "Käynnistä palvelin",
-    "gui_stop_server": "Pysäytä palvelin",
+    "gui_share_start_server": "Käynnistä palvelin",
+    "gui_share_stop_server": "Pysäytä palvelin",
     "gui_copy_url": "Kopioi URL-osoite",
     "gui_downloads": "Lataukset:",
     "gui_canceled": "Peruutettu",
