--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -29,8 +29,8 @@
     "gui_add": "Ajouter",
     "gui_delete": "Supprimer",
     "gui_choose_items": "Sélectionnez",
-    "gui_start_server": "Démarrer le serveur",
-    "gui_stop_server": "Arrêter le serveur",
+    "gui_share_start_server": "Démarrer le serveur",
+    "gui_share_stop_server": "Arrêter le serveur",
     "gui_copy_url": "Copier URL",
     "gui_copy_hidservauth": "Copier HidServAuth",
     "gui_downloads": "Téléchargements :",
