--- a/share/locale/it.json
+++ b/share/locale/it.json
@@ -26,8 +26,8 @@
     "gui_add": "Aggiungi",
     "gui_delete": "Cancella",
     "gui_choose_items": "Scegli",
-    "gui_start_server": "Inizia la condivisione",
-    "gui_stop_server": "Ferma la condivisione",
+    "gui_share_start_server": "Inizia la condivisione",
+    "gui_share_stop_server": "Ferma la condivisione",
     "gui_copy_url": "Copia lo URL",
     "gui_downloads": "Downloads:",
     "gui_canceled": "Cancellati",
