--- a/share/locale/tr.json
+++ b/share/locale/tr.json
@@ -26,8 +26,8 @@
     "gui_add": "Ekle",
     "gui_delete": "Sil",
     "gui_choose_items": "Seç",
-    "gui_start_server": "Paylaşımı Başlat",
-    "gui_stop_server": "Paylaşımı Durdur",
+    "gui_share_start_server": "Paylaşımı Başlat",
+    "gui_share_stop_server": "Paylaşımı Durdur",
     "gui_copy_url": "URL Kopyala",
     "gui_downloads": "İndirilenler:",
     "gui_canceled": "İptal edilen",
