Add receive mode warning

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -168,7 +168,8 @@
     "error_cannot_create_downloads_dir": "Error creating downloads folder: {}",
     "error_downloads_dir_not_writable": "The downloads folder isn't writable: {}",
     "receive_mode_downloads_dir": "Files people send you will appear in this folder: {}",
-    "receive_mode_warning": "Warning: Some files can hack your computer if you open them! Only open files from people you trust, or if you know what you're doing.",
+    "receive_mode_warning": "Warning: Receive mode lets someone else upload files to your computer. Some files can hack your computer if you open them! Only open files from people you trust, or if you know what you're doing.",
+    "gui_receive_mode_warning": "<b>Some files can hack your computer if you open them!</b><br>Only open files from people you trust, or if you know what you're doing.",
     "receive_mode_received_file": "Received file: {}",
     "gui_mode_share_button": "Share Files",
     "gui_mode_receive_button": "Receive Files",
