--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -70,7 +70,8 @@
     "gui_download_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Transfer in Progress",
-    "gui_quit_warning": "You're in the process of sending files. Are you sure you want to quit OnionShare?",
+    "gui_share_quit_warning": "You're in the process of sending files. Are you sure you want to quit OnionShare?",
+    "gui_receive_quit_warning": "You're in the process of receiving files. Are you sure you want to quit OnionShare?",
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Cancel",
     "error_rate_limit": "An attacker might be trying to guess your address. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new address.",
