--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -177,5 +177,7 @@
     "gui_mode_receive_button": "Receive Files",
     "gui_settings_receiving_label": "Receiving options",
     "gui_settings_downloads_label": "Save files to",
-    "gui_settings_downloads_button": "Browse"
+    "gui_settings_downloads_button": "Browse",
+    "gui_settings_receive_allow_receiver_shutdown_checkbox": "Allow people who upload files to you to stop Receive Mode for you",
+    "gui_settings_receive_public_mode_checkbox": "Receive Mode is open to the public\n(don't try to prevent people from guessing the OnionShare address)"
 }
