--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -191,6 +191,6 @@
     "gui_uploads": "Upload History",
     "gui_uploads_window_tooltip": "Show/hide uploads",
     "gui_no_uploads": "No uploads yet.",
-    "gui_upload_in_progress": "Upload in progress, started {}",
+    "gui_upload_in_progress": "Upload Started {}",
     "gui_upload_finished": "Uploaded {} to {}"
 }
