--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -193,5 +193,6 @@
     "gui_no_uploads": "No uploads yet.",
     "gui_upload_in_progress": "Upload Started {}",
     "gui_upload_finished_range": "Uploaded {} to {}",
-    "gui_upload_finished": "Uploaded {}"
+    "gui_upload_finished": "Uploaded {}",
+    "gui_open_folder_error_nautilus": "Cannot open folder the because nautilus is not available. You can find this file here: {}"
 }
