#681 remove obsolete strings

--- a/share/locale/da.json
+++ b/share/locale/da.json
@@ -1,66 +1,35 @@
 {
     "config_onion_service": "Konfigurerer onion-tjeneste på port {0:d}.",
     "preparing_files": "Forbereder filer som skal deles.",
-    "wait_for_hs": "Venter på at HS bliver klar:",
-    "wait_for_hs_trying": "Prøver...",
-    "wait_for_hs_nope": "Endnu ikke klar.",
-    "wait_for_hs_yup": "Klar!",
     "give_this_url": "Giv denne URL til personen du sender filen til:",
     "give_this_url_stealth": "Giv denne URL og HidServAuth-linje til personen du sender filen til:",
     "ctrlc_to_stop": "Tryk på Ctrl-C for at stoppe serveren",
     "not_a_file": "{0:s} er ikke en gyldig fil.",
     "not_a_readable_file": "{0:s} er ikke en læsbar fil.",
     "no_available_port": "Kunne ikke starte onion-tjenesten da der ikke var nogen tilgængelig port.",
-    "download_page_loaded": "Downloadside indlæst",
     "other_page_loaded": "URL indlæst",
     "close_on_timeout": "Lukker automatisk da timeout er nået",
     "closing_automatically": "Lukker automatisk da download er færdig",
-    "timeout_download_still_running": "Venter på at download skal blive færdig inden automatisk stop",
     "large_filesize": "Advarsel: Det kan tage timer at sende store filer",
-    "error_tails_invalid_port": "Ugyldig værdi, port skal være et heltal",
-    "error_tails_unknown_root": "Ukendt fejl med Tails-rodproces",
     "systray_menu_exit": "Afslut",
-    "systray_download_started_title": "OnionShare-download startet",
-    "systray_download_started_message": "En bruger startede download af dine filer",
-    "systray_download_completed_title": "OnionShare-download færdig",
-    "systray_download_completed_message": "Brugeren er færdig med at downloade dine filer",
-    "systray_download_canceled_title": "OnionShare-download annulleret",
-    "systray_download_canceled_message": "Brugeren annullerede downloaden",
     "help_local_only": "Undlad at bruge tor: kun til udvikling",
     "help_stay_open": "Hold onion-tjeneste kørende efter download er færdig",
     "help_shutdown_timeout": "Luk onion-tjenesten efter N sekunder",
-    "help_transparent_torification": "Mit system er gennemsigtigt torifiseret",
     "help_stealth": "Opret usynlig onion-tjeneste (avanceret)",
     "help_debug": "Log programfejl til stdout, og log webfejl til disk",
     "help_filename": "Liste over filer eller mapper som skal deles",
     "help_config": "Sti til en brugerdefineret JSON-konfigurationsfil (valgfri)",
-    "gui_drag_and_drop": "Træk og slip\nfiler her",
-    "gui_add": "Tilføj",
-    "gui_delete": "Slet",
-    "gui_choose_items": "Vælg",
     "gui_share_start_server": "Start deling",
     "gui_share_stop_server": "Stop deling",
     "gui_copy_url": "Kopiér URL",
     "gui_copy_hidservauth": "Kopiér HidServAuth",
-    "gui_downloads": "Downloads:",
-    "gui_canceled": "Annulleret",
-    "gui_copied_url": "Kopierede URL til udklipsholder",
-    "gui_copied_hidservauth": "Kopierede HidServAuth-linje til udklipsholder",
-    "gui_starting_server1": "Starter Tor onion-tjeneste...",
-    "gui_starting_server2": "Databehandler filer...",
     "gui_please_wait": "Vent venligst...",
-    "error_hs_dir_cannot_create": "Kan ikke oprette onion-tjenestens mappe {0:s}",
-    "error_hs_dir_not_writable": "onion-tjenestens mappe {0:s} er skrivebeskyttet",
     "using_ephemeral": "Starter kortvarig Tor onion-tjeneste og afventer udgivelse",
-    "gui_download_upload_progress_complete": "%p%, tid forløbet: {0:s}",
-    "gui_download_upload_progress_starting": "{0:s}, %p% (udregner anslået ankomsttid)",
-    "gui_download_upload_progress_eta": "{0:s}, anslået ankomsttid: {1:s}, %p%",
     "version_string": "Onionshare {0:s} | https://onionshare.org/",
     "gui_share_quit_warning": "Er du sikker på, at du vil afslutte?\nURL'en som du deler vil ikke eksistere længere.",
     "gui_quit_warning_quit": "Afslut",
     "gui_quit_warning_dont_quit": "Afslut ikke",
     "error_rate_limit": "En angriber forsøger måske at gætte din URL. For at forhindre det, har OnionShare automatisk stoppet serveren. For at dele filerne skal du starte den igen og dele den nye URL.",
-    "zip_progress_bar_format": "Databehandler filer: %p%",
     "error_stealth_not_supported": "For at oprette usynlige onion-tjenester, skal du mindst have Tor 0.2.9.1-alpha (eller Tor Browser 6.5) og mindst python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare kræver mindst Tor 0.2.7.1 og mindst python3-stem 1.4.0.",
     "gui_settings_window_title": "Indstillinger",
@@ -87,9 +56,7 @@
     "gui_settings_authenticate_label": "Valgmuligheder for Tor-autentifikation",
     "gui_settings_authenticate_no_auth_option": "Ingen autentifikation, eller cookieautentifikation",
     "gui_settings_authenticate_password_option": "Adgangskode",
-    "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Adgangskode",
-    "gui_settings_cookie_label": "Cookiesti",
     "gui_settings_tor_bridges": "Understøttelse af Tor-bro",
     "gui_settings_tor_bridges_no_bridges_radio_option": "Brug ikke broer",
     "gui_settings_tor_bridges_obfs4_radio_option": "Brug indbygget obfs4 udskiftelige transporter",
@@ -100,7 +67,6 @@
     "gui_settings_button_save": "Gem",
     "gui_settings_button_cancel": "Annuller",
     "gui_settings_button_help": "Hjælp",
-    "gui_settings_shutdown_timeout_choice": "Sæt timer til automatisk stop?",
     "gui_settings_shutdown_timeout": "Stop delingen ved:",
     "settings_saved": "Indstillinger gemt til {}",
     "settings_error_unknown": "Kan ikke oprette forbindelse til Tor-kontroller da indstillingerne ikke giver mening.",
@@ -112,7 +78,6 @@
     "settings_error_unreadable_cookie_file": "Forbundet til Tor-kontroller, men kan ikke autentificere da din adgangskode kan være forkert, og din bruger ikke har tilladelse til at læse cookiefilen.",
     "settings_error_bundled_tor_not_supported": "Bundet Tor understøttes ikke når der ikke bruges udviklertilstand i Windows eller MacOS.",
     "settings_error_bundled_tor_timeout": "Det tager for længe at oprette forbindelse til Tor. Din computer er måske offline, eller dit ur går forkert.",
-    "settings_error_bundled_tor_canceled": "Tor-processen lukkede inden den blev færdig med at oprette forbindelse.",
     "settings_error_bundled_tor_broken": "Der er noget galt med OnionShare som opretter forbindelse til Tor i baggrunden:\n{}",
     "settings_test_success": "Tillykke, OnionShare kan oprette forbindelse til Tor-kontrolleren.\n\nTor version: {}\nUnderstøtter kortvarige onion-tjenester: {}\nUnderstøtter usynlige onion-tjenester: {}",
     "error_tor_protocol_error": "Fejl under snak med Tor-kontrolleren.\nHvis du bruger Whonix, så tjek https://www.whonix.org/wiki/onionshare for at få OnionShare til at virke.",
@@ -129,7 +94,5 @@
     "gui_tor_connection_lost": "Afbryder forbindelsen fra Tor.",
     "gui_server_started_after_timeout": "Serveren startede efter dit valgte automatiske timeout.\nStart venligst en ny deling.",
     "gui_server_timeout_expired": "Den valgte timeout er allerede udløbet.\nOpdater venligst timeouten og herefter kan du starte deling.",
-    "share_via_onionshare": "Del via OnionShare",
-    "gui_save_private_key_checkbox": "Brug en vedvarende URL\n(fravalg vil slette gemte URL)",
-    "persistent_url_in_use": "Denne deling bruger en vedvarende URL"
+    "gui_save_private_key_checkbox": "Brug en vedvarende URL\n(fravalg vil slette gemte URL)"
 }
