--- a/share/locale/nl.json
+++ b/share/locale/nl.json
@@ -1,64 +1,33 @@
 {
     "config_onion_service": "Onion service configureren op poort {0:d}.",
     "preparing_files": "Bestanden om te delen aan het voorbereiden.",
-    "wait_for_hs": "Wachten op gereed zijn van HS:",
-    "wait_for_hs_trying": "Proberen...",
-    "wait_for_hs_nope": "Nog niet gereed.",
-    "wait_for_hs_yup": "Gereed!",
     "give_this_url": "Geef deze URL aan de persoon aan wie je dit bestand verzend:",
     "give_this_url_stealth": "Geef deze URL en de HidServAuth regel aan de persoon aan wie je dit bestand verzend:",
     "ctrlc_to_stop":  "Druk Ctrl-C om de server te stoppen",
     "not_a_file": "{0:s} is geen bestand.",
     "not_a_readable_file": "{0:s} is geen leesbaar bestand.",
     "no_available_port": "Kan de Onion service niet starten, er zijn geen poorten beschikbaar.",
-    "download_page_loaded": "Downloadpagina geladen",
     "other_page_loaded": "URL geladen",
     "close_on_timeout": "Sluit automatisch omdat timeout bereikt is",
     "closing_automatically": "Sluit automatisch omdat download gereed is",
-    "timeout_download_still_running": "Wachten totdat download gereed is voor automatisch sluiten",
     "large_filesize": "Waarschuwing: Versturen van grote bestanden kan uren duren",
-    "error_tails_invalid_port": "Ongeldige waarde, poort moet een integer zijn",
-    "error_tails_unknown_root": "Onbekende fout met het Tails root proces",
     "systray_menu_exit": "Afsluiten",
-    "systray_download_started_title": "OnionShare download gestart",
-    "systray_download_started_message": "Een gebruiker is begonnen met downloaden van je bestanden",
-    "systray_download_completed_title": "OnionShare download gereed",
-    "systray_download_completed_message": "De gebruiker is klaar met downloaden",
-    "systray_download_canceled_title": "OnionShare download afgebroken",
-    "systray_download_canceled_message": "De gebruiker heeft de download afgebroken",
     "help_local_only": "Maak geen gebruik van Tor, alleen voor ontwikkeling",
     "help_stay_open": "Laat verborgen service draaien nadat download gereed is",
     "help_shutdown_timeout": "Sluit de Onion service na N seconden",
-    "help_transparent_torification": "Mijn systeem gebruikt Tor als proxyserver",
     "help_stealth": "Maak stealth Onion service (geavanceerd)",
     "help_debug": "Log fouten naar harde schijf",
     "help_filename": "Lijst van bestanden of mappen om te delen",
     "help_config": "Pad naar een JSON configuratie bestand (optioneel)",
-    "gui_drag_and_drop": "Sleep en zet\nbestanden hier neer",
-    "gui_add": "Toevoegen",
-    "gui_delete": "Verwijder",
-    "gui_choose_items": "Kies",
     "gui_copy_url": "Kopieer URL",
     "gui_copy_hidservauth": "Kopieer HidServAuth",
-    "gui_downloads": "Downloads:",
-    "gui_canceled": "Afgebroken",
-    "gui_copied_url": "URL gekopieerd naar klembord",
-    "gui_copied_hidservauth": "HidServAuth regel gekopieerd naar klembord",
-    "gui_starting_server1": "Tor onion service wordt gestart...",
-    "gui_starting_server2": "Bestanden verwerken...",
     "gui_please_wait": "Moment geduld...",
-    "error_hs_dir_cannot_create": "Kan verborgen service map {0:s} niet aanmaken",
-    "error_hs_dir_not_writable": "Verborgen service map {0:s} is niet schrijfbaar",
     "using_ephemeral": "Kortstondige Tor onion service gestart en in afwachting van publicatie",
-    "gui_download_upload_progress_complete": "%p%, Tijd verstreken: {0:s}",
-    "gui_download_upload_progress_starting": "{0:s}, %p% (ETA berekenen)",
-    "gui_download_upload_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "Onionshare {0:s} | https://onionshare.org/",
     "gui_share_quit_warning": "Weet je zeker dat je wilt afsluiten?\nDe URL die je aan het delen bent zal niet meer bestaan.",
     "gui_quit_warning_quit": "Afsluiten",
     "gui_quit_warning_dont_quit": "Niet afsluiten",
     "error_rate_limit": "Een aanvaller probeert misschien je URL te gokken. Om dit te voorkomen heeft OnionShare de server automatisch gestopt. Om de bestanden te delen moet je de server opnieuw starten en de nieuwe URL delen.",
-    "zip_progress_bar_format": "Bestanden verwerken: %p%",
     "error_stealth_not_supported": "Om een geheime onion service te maken heb je minstens Tor 0.2.9.1-alpha (of Tor Browser 6.5) en minstens python3-stem 1.5.0 nodig.",
     "error_ephemeral_not_supported": "OnionShare vereist minstens Tor 0.2.7.1 en minstens python3-stem 1.4.0.",
     "gui_settings_window_title": "Instellingen",
@@ -84,13 +53,10 @@
     "gui_settings_authenticate_label": "Tor authenticatie opties",
     "gui_settings_authenticate_no_auth_option": "Geen authenticatie of cookie authenticatie",
     "gui_settings_authenticate_password_option": "Wachtwoord",
-    "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Wachtwoord",
-    "gui_settings_cookie_label": "Cookie pad",
     "gui_settings_button_save": "Opslaan",
     "gui_settings_button_cancel": "Annuleren",
     "gui_settings_button_help": "Help",
-    "gui_settings_shutdown_timeout_choice": "Auto-stop timer instellen?",
     "gui_settings_shutdown_timeout": "Stop delen om:",
     "settings_saved": "Instellingen opgeslagen in {}",
     "settings_error_unknown": "Kan geen verbinding maken met de Tor controller omdat de instellingen niet kloppen.",
@@ -102,7 +68,6 @@
     "settings_error_unreadable_cookie_file": "Verbonden met Tor controller, maar kan niet authenticeren omdat wachtwoord onjuist is en gebruiker heeft niet de permissies om cookie bestand te lezen.",
     "settings_error_bundled_tor_not_supported": "Meegeleverde Tor is niet onersteunt wanneer je niet de ontwikkelaarsmodus gebruikt in Windows or macOS.",
     "settings_error_bundled_tor_timeout": "Verbinden met Tor duurt te lang. Misschien is je computer offline, of je klok is niet accuraat.",
-    "settings_error_bundled_tor_canceled": "Het Tor is afgesloten voordat het kon verbinden.",
     "settings_error_bundled_tor_broken": "OnionShare kan niet verbinden met Tor op de achtergrond:\n{}",
     "settings_test_success": "Gefeliciteerd, OnionShare kan verbinden met de Tor controller.\n\nTor version: {}\nOndersteunt kortstondige onion services: {}\nOndersteunt geheime onion services: {}",
     "error_tor_protocol_error": "Fout bij praten met de Tor controller.\nAls je Whonix gebruikt, kijk dan hier https://www.whonix.org/wiki/onionshare om OnionShare werkend te krijgen.",
@@ -117,6 +82,5 @@
     "gui_tor_connection_error_settings": "Probeer de instellingen hoe OnionShare verbind met het Tor network aan te passen in Instellingen.",
     "gui_tor_connection_canceled": "OnionShare kan niet verbinden met Tor.\n\nControleer of je verbonden bent met het internet, herstart OnionShare om de Tor verbinding te configureren.",
     "gui_server_started_after_timeout": "De server startte na de gekozen auto-timeout.\nDeel opnieuw.",
-    "gui_server_timeout_expired": "De gekozen timeout is al verlopen.\nKies nieuwe timeout deel opnieuw.",
-    "share_via_onionshare": "Deel via OnionShare"
+    "gui_server_timeout_expired": "De gekozen timeout is al verlopen.\nKies nieuwe timeout deel opnieuw."
 }
