--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -1,10 +1,6 @@
 {
     "config_onion_service": "Configuring onion service on port {0:d}.",
     "preparing_files": "Preparing files to share.",
-    "wait_for_hs": "Waiting for HS to be ready:",
-    "wait_for_hs_trying": "Trying…",
-    "wait_for_hs_nope": "Not ready yet.",
-    "wait_for_hs_yup": "Ready!",
     "give_this_url": "Give this address to the person you're sending the file to:",
     "give_this_url_stealth": "Give this address and HidServAuth line to the person you're sending the file to:",
     "give_this_url_receive": "Give this address to the people sending you files:",
@@ -17,21 +13,8 @@
     "other_page_loaded": "Address loaded",
     "close_on_timeout": "Stopped because timer expired",
     "closing_automatically": "Stopped because download finished",
-    "timeout_download_still_running": "Waiting for download to complete",
     "large_filesize": "Warning: Sending large files could take hours",
-    "error_tails_invalid_port": "Invalid value, port must be a regular number",
-    "error_tails_unknown_root": "Unknown error with Tails root process",
     "systray_menu_exit": "Quit",
-    "systray_download_started_title": "OnionShare Download Started",
-    "systray_download_started_message": "A user started downloading your files",
-    "systray_download_completed_title": "OnionShare Download Finished",
-    "systray_download_completed_message": "The user finished downloading your files",
-    "systray_download_canceled_title": "OnionShare Download Canceled",
-    "systray_download_canceled_message": "The user canceled the download",
-    "systray_upload_started_title": "OnionShare Upload Started",
-    "systray_upload_started_message": "A user started uploading files to your computer",
-    "systray_upload_completed_title": "OnionShare Upload Finished",
-    "systray_upload_completed_message": "The user finished uploading files to your computer",
     "help_local_only": "Do not attempt to use Tor: For development only",
     "help_stay_open": "Keep onion service running after download has finished",
     "help_shutdown_timeout": "Shut down the onion service after N seconds",
@@ -40,37 +23,18 @@
     "help_debug": "Log application errors to stdout, and log web errors to disk",
     "help_filename": "List of files or folders to share",
     "help_config": "Path to a custom JSON config file (optional)",
-    "gui_drag_and_drop": "Drag and drop files and folders\nto start sharing",
-    "gui_add": "Add",
-    "gui_delete": "Delete",
-    "gui_choose_items": "Choose",
     "gui_share_start_server": "Start Sharing",
     "gui_share_stop_server": "Stop Sharing",
-    "gui_share_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
     "gui_share_stop_server_shutdown_timeout_tooltip": "Share will expire automatically at {}",
     "gui_receive_start_server": "Start Receive Mode",
     "gui_receive_stop_server": "Stop Receive Mode",
-    "gui_receive_stop_server_shutdown_timeout": "Stop Receive Mode ({}s remaining)",
     "gui_receive_stop_server_shutdown_timeout_tooltip": "Receive mode will expire automatically at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
-    "gui_downloads": "Download History",
-    "gui_downloads_window_tooltip": "Show/hide downloads",
-    "gui_no_downloads": "No downloads yet.",
-    "gui_canceled": "Canceled",
     "gui_copied_url_title": "Copied OnionShare address",
-    "gui_copied_url": "The OnionShare address has been copied to clipboard",
     "gui_copied_hidservauth_title": "Copied HidServAuth",
-    "gui_copied_hidservauth": "The HidServAuth line has been copied to clipboard",
-    "gui_starting_server1": "Starting Tor onion service…",
-    "gui_starting_server2": "Compressing files…",
     "gui_please_wait": "Starting… Click to cancel",
-    "error_hs_dir_cannot_create": "Cannot create onion service dir {0:s}",
-    "error_hs_dir_not_writable": "onion service dir {0:s} is not writable",
     "using_ephemeral": "Starting ephemeral Tor onion service and awaiting publication",
-    "gui_download_upload_progress_complete": "%p%, Time Elapsed: {0:s}",
-    "gui_download_upload_progress_starting": "{0:s}, %p% (Computing ETA)",
-    "gui_download_upload_progress_eta": "{0:s}, ETA: {1:s}, %p%",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Transfer in Progress",
     "gui_share_quit_warning": "You're in the process of sending files. Are you sure you want to quit OnionShare?",
@@ -78,7 +42,6 @@
     "gui_quit_warning_quit": "Quit",
     "gui_quit_warning_dont_quit": "Cancel",
     "error_rate_limit": "An attacker might be trying to guess your address. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new address.",
-    "zip_progress_bar_format": "Compressing files: %p%",
     "error_stealth_not_supported": "To create stealth onion services, you need at least Tor 0.2.9.1-alpha (or Tor Browser 6.5) and at least python3-stem 1.5.0.",
     "error_ephemeral_not_supported": "OnionShare requires at least Tor 0.2.7.1 and at least python3-stem 1.4.0.",
     "gui_settings_window_title": "Settings",
@@ -105,9 +68,7 @@
     "gui_settings_authenticate_label": "Tor authentication options",
     "gui_settings_authenticate_no_auth_option": "No authentication, or cookie authentication",
     "gui_settings_authenticate_password_option": "Password",
-    "gui_settings_authenticate_cookie_option": "Cookie",
     "gui_settings_password_label": "Password",
-    "gui_settings_cookie_label": "Cookie path",
     "gui_settings_tor_bridges": "Tor Bridge support",
     "gui_settings_tor_bridges_no_bridges_radio_option": "Don't use bridges",
     "gui_settings_tor_bridges_obfs4_radio_option": "Use built-in obfs4 pluggable transports",
@@ -135,7 +96,6 @@
     "settings_error_unreadable_cookie_file": "Connected to Tor controller, but can't authenticate because your password may be wrong, and your user lacks permission to read the cookie file.",
     "settings_error_bundled_tor_not_supported": "Use of the Tor version bundled with OnionShare is not supported when using developer mode on Windows or macOS.",
     "settings_error_bundled_tor_timeout": "Connecting to Tor is taking too long. Maybe your computer is offline, or your system clock isn't accurate.",
-    "settings_error_bundled_tor_canceled": "The Tor process closed before it could finish connecting.",
     "settings_error_bundled_tor_broken": "OnionShare could not connect to Tor in the background:\n{}",
     "settings_test_success": "Congratulations, OnionShare can connect to the Tor controller.\n\nTor version: {}\nSupports ephemeral onion services: {}\nSupports stealth onion services: {}",
     "error_tor_protocol_error": "Could not communicate with the Tor controller.\nIf you're using Whonix, check out https://www.whonix.org/wiki/onionshare to make OnionShare work.",
@@ -152,7 +112,6 @@
     "gui_tor_connection_lost": "Disconnected from Tor.",
     "gui_server_started_after_timeout": "The server started after your chosen auto-timeout.\nPlease start a new share.",
     "gui_server_timeout_expired": "The chosen timeout has already expired.\nPlease update the timeout and then you may start sharing.",
-    "share_via_onionshare": "Share via OnionShare",
     "gui_save_private_key_checkbox": "Use a persistent address\n(unchecking will delete any saved addresses)",
     "gui_share_url_description": "<b>Anyone</b> with this link can <b>download</b> your files using the <b>Tor Browser</b>: <img src='{}' />",
     "gui_receive_url_description": "<b>Anyone</b> with this link can <b>upload</b> files to your computer using the <b>Tor Browser</b>: <img src='{}' />",
@@ -166,15 +125,10 @@
     "gui_status_indicator_receive_stopped": "Ready to Receive",
     "gui_status_indicator_receive_working": "Starting…",
     "gui_status_indicator_receive_started": "Receiving",
-    "gui_file_info": "{} Files, {}",
-    "gui_file_info_single": "{} File, {}",
-    "info_in_progress_downloads_tooltip": "{} download(s) in progress",
-    "info_completed_downloads_tooltip": "{} download(s) completed",
     "error_cannot_create_downloads_dir": "Error creating downloads folder: {}",
     "error_downloads_dir_not_writable": "The downloads folder isn't writable: {}",
     "receive_mode_downloads_dir": "Files people send you will appear in this folder: {}",
     "receive_mode_warning": "Warning: Receive mode lets someone else upload files to your computer. Some files can hack your computer if you open them! Only open files from people you trust, or if you know what you're doing.",
-    "gui_receive_mode_warning": "<b>Some files can hack your computer if you open them!</b><br>Only open files from people you trust, or if you know what you're doing.",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
     "receive_mode_received_file": "Received file: {}",
     "gui_mode_share_button": "Share Files",
@@ -183,17 +137,5 @@
     "gui_settings_downloads_label": "Save files to",
     "gui_settings_downloads_button": "Browse",
     "gui_settings_receive_allow_receiver_shutdown_checkbox": "Receive mode can be stopped by the sender",
-    "gui_settings_receive_public_mode_checkbox": "Receive mode is open to the public\n(don't prevent people from guessing the OnionShare address)",
-    "systray_close_server_title": "OnionShare Server Closed",
-    "systray_close_server_message": "A user closed the server",
-    "systray_page_loaded_title": "OnionShare Page Loaded",
-    "systray_download_page_loaded_message": "A user loaded the download page",
-    "systray_upload_page_loaded_message": "A user loaded the upload page",
-    "gui_uploads": "Upload History",
-    "gui_uploads_window_tooltip": "Show/hide uploads",
-    "gui_no_uploads": "No uploads yet.",
-    "gui_upload_in_progress": "Upload Started {}",
-    "gui_upload_finished_range": "Uploaded {} to {}",
-    "gui_upload_finished": "Uploaded {}",
-    "gui_open_folder_error_nautilus": "Cannot open folder the because nautilus is not available. You can find this file here: {}"
+    "gui_settings_receive_public_mode_checkbox": "Receive mode is open to the public\n(don't prevent people from guessing the OnionShare address)"
 }
