--- a/share/locale/es.json
+++ b/share/locale/es.json
@@ -1,15 +1,32 @@
 {
+    "connecting_ctrlport": "Conectando a puerto control de Tor para configurar servicio oculto en puerto {0:d}.",
+    "cant_connect_ctrlport": "No se pudo conectar a puerto control de Tor en puertos {0:s}. ¿Está funcionando Tor?",
+    "cant_connect_socksport": "No se pudo conectar al servidor SOCKS5 de Tor en el puerto {0:s}. ¿Está funcionando Tor?",
     "preparing_files": "Preparando los archivos para compartir.",
+    "wait_for_hs": "Esperando a que HS esté listo:",
+    "wait_for_hs_trying": "Probando...",
+    "wait_for_hs_nope": "No está listo todavía.",
+    "wait_for_hs_yup": "Listo!",
     "give_this_url": "Entregue esta URL a la persona a la que está enviando el archivo:",
     "ctrlc_to_stop":  "Pulse Ctrl-C para detener el servidor",
     "not_a_file": "{0:s} no es un archivo.",
+    "download_page_loaded": "La página de descarga está lista.",
     "other_page_loaded": "La URL está lista.",
     "closing_automatically": "Apagando automáticamente porque la descarga finalizó",
+    "error_tails_invalid_port": "Valor inválido, el puerto debe ser un entero",
+    "error_tails_unknown_root": "Error desconocido en el proceso de Tails ejecutando como roo",
+    "help_tails_port": "Sólo Tails: puerto para abrir en el firewall, al levantar el servicio oculto",
     "help_local_only": "No intentar usar Tor: sólo para desarrollo",
     "help_stay_open": "Mantener el servicio oculto ejecutando después de que la descarga haya finalizado",
     "help_debug": "Guardar registro de errores en el disco",
     "help_filename": "Lista de archivos o carpetas para compartir",
+    "gui_drag_and_drop": "Arrastre\narchivos aquí",
+    "gui_add": "Añadir",
+    "gui_delete": "Eliminar",
+    "gui_choose_items": "Elegir",
     "gui_share_start_server": "Encender el Servidor",
     "gui_share_stop_server": "Detener el Servidor",
-    "gui_copy_url": "Copiar URL"
+    "gui_copy_url": "Copiar URL",
+    "gui_downloads": "Descargas:",
+    "gui_copied_url": "Se copió la URL en el portapapeles"
 }
