--- a/share/locale/fr.json
+++ b/share/locale/fr.json
@@ -1,19 +1,41 @@
 {
+    "connecting_ctrlport": "Connexion au réseau Tor pour mettre en place un onion service sur le port {0:d}.",
+    "cant_connect_ctrlport": "Impossible de se connecter au port de contrôle Tor sur le port {0:s}. Est-ce que Tor tourne ?",
     "preparing_files": "Préparation des fichiers à partager.",
+    "wait_for_hs": "En attente du HS:",
+    "wait_for_hs_trying": "Tentative...",
+    "wait_for_hs_nope": "Pas encore prêt.",
+    "wait_for_hs_yup": "Prêt !",
     "give_this_url": "Donnez cette URL à la personne qui doit recevoir le fichier :",
     "ctrlc_to_stop":  "Ctrl-C arrête le serveur",
     "not_a_file": "{0:s} n'est pas un fichier.",
+    "download_page_loaded": "Page de téléchargement chargée",
     "other_page_loaded": "URL chargée",
     "closing_automatically": "Fermeture automatique car le téléchargement est fini",
+    "error_tails_invalid_port": "Valeur invalide, le port doit être un nombre entier",
+    "error_tails_unknown_root": "Erreur inconnue avec un processus root sur Tails",
     "systray_menu_exit": "Quitter",
+    "systray_download_started_title": "Téléchargement OnionShare Démarré",
+    "systray_download_started_message": "Un utilisateur télécharge vos fichiers",
+    "systray_download_completed_title": "Téléchargement OnionShare Complete",
+    "systray_download_canceled_title": "Téléchargement OnionShare Annulé",
+    "systray_download_canceled_message": "L'utilisateur a annulé le téléchargement",
+    "help_tails_port": "Seulement sur Tails: port pour ouvrir le firewall, démarrage du onion service",
     "help_local_only": "Ne tentez pas d'utiliser Tor, uniquement pour développement",
     "help_stay_open": "Laisser tourner le onion service après que le téléchargment soit fini",
     "help_debug": "Enregistrer les erreurs sur le disque",
     "help_filename": "Liste des fichiers ou dossiers à partager",
+    "gui_drag_and_drop": "Glissez déposez\nles fichiers ici",
+    "gui_add": "Ajouter",
+    "gui_delete": "Supprimer",
+    "gui_choose_items": "Sélectionnez",
     "gui_share_start_server": "Démarrer le serveur",
     "gui_share_stop_server": "Arrêter le serveur",
     "gui_copy_url": "Copier URL",
     "gui_copy_hidservauth": "Copier HidServAuth",
+    "gui_downloads": "Téléchargements :",
+    "gui_canceled": "Annulé",
+    "gui_copied_url": "URL copié dans le presse-papier",
     "gui_please_wait": "Attendez-vous...",
     "gui_quit_warning_quit": "Quitter",
     "gui_quit_warning_dont_quit": "Ne quitter pas",
